# quant-research

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: live-tests.yml  tests.yml
api/: .env.example  Dockerfile  README.md  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 1bd654d269fb_initial_schema_users_saved_configs_runs.py
api/quant_research_api/: bootstrap.py  celery_app.py  database.py  deps.py  main.py  models.py  schemas.py  security.py  settings.py  tasks.py
api/quant_research_api/routers/: auth.py  configs.py  registry.py  runs.py
api/tests/: conftest.py  test_auth.py  test_configs.py  test_registry.py  test_runs.py
configs/: example_live_smoke.yaml  example_multi_asset.yaml
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
tests/: conftest.py
tests/integration/: test_pipeline_end_to_end.py
tests/network/: test_live_data_sources.py  test_live_pipeline_smoke.py
tests/unit/: test_backtest_engine.py  test_backtest_metrics.py  test_backtest_rebalance.py  test_builtin_hooks.py  test_cache_backend_contract.py  test_cache_duckdb.py  test_cache_parquet.py  test_cli.py  test_config_schema.py  test_data_access.py  test_data_sources.py  test_data_sources_alpha_vantage.py  test_data_sources_coingecko.py  test_data_sources_fred.py  test_data_sources_nasdaq_data_link.py  test_data_sources_sec_edgar.py  test_data_sources_stooq.py  test_hooks.py  test_ic_analysis.py  test_lookahead_convention.py  test_registry.py  test_report.py  test_signals_bollinger.py  test_signals_breakout.py  test_signals_composite.py  test_signals_cross_sectional_rank.py  test_signals_macd.py  test_signals_macro_overlay.py  test_signals_mean_reversion.py  test_signals_momentum.py  test_signals_pairs_zscore.py  test_signals_pipeline.py  test_signals_realized_vol.py  test_signals_rsi.py  test_signals_value_proxy.py  test_strategy_min_variance.py  (+6 more)
(+48 files in other folders)
