[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-research-api"
version = "0.1.0"
description = "Multi-user FastAPI service wrapping the quant_research engine: accounts, saved configs, async runs."
requires-python = ">=3.11"
dependencies = [
    # quant-research (the core engine) is NOT listed here -- it isn't on PyPI.
    # Install both in one editable pass: pip install -e ../ -e .[dev]
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "alembic>=1.13",
    "pydantic-settings>=2.4",
    "bcrypt>=4.1",
    "pyjwt>=2.9",
    "celery[redis]>=5.4",
    "python-multipart>=0.0.9",
    "email-validator>=2.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27", "pytest-cov>=5.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["quant_research_api*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
